--- a/package.json
+++ b/package.json
@@ -11,28 +11,14 @@
         "preview:https": "vite preview --config vite.config.https.js"
     },
     "dependencies": {
-        "@pixi/app": "^7.2.4",
-        "@pixi/assets": "^7.2.4",
-        "@pixi/core": "^7.2.4",
-        "@pixi/display": "^7.2.4",
-        "@pixi/events": "^7.2.4",
-        "@pixi/graphics": "^7.2.4",
-        "@pixi/sprite": "^7.2.4",
-        "@pixi/text": "^7.2.4",
-        "@pixi/unsafe-eval": "^7.2.4",
-        "@pixi/utils": "^7.2.4"
+        "pixi.js": "8.0.0-rc.10"
     },
     "devDependencies": {
-        "@fontsource/antonio": "^4.5.10",
-        "@types/web-bluetooth": "^0.0.16",
-        "@vitejs/plugin-basic-ssl": "^1.0.1",
-        "typescript": "~5.0.4",
-        "vite": "^4.3.8",
-        "vite-plugin-top-level-await": "^1.3.0"
-    },
-    "pnpm": {
-        "overrides": {
-            "@types/css-font-loading-module": "^0.0.8"
-        }
+        "@fontsource/antonio": "^5.0.18",
+        "@types/web-bluetooth": "^0.0.20",
+        "@vitejs/plugin-basic-ssl": "^1.1.0",
+        "typescript": "~5.3.3",
+        "vite": "^5.1.4",
+        "vite-plugin-top-level-await": "^1.4.1"
     }
 }
